# receipt-api-rocket

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
migrations/2023-02-11-223836_create_users/: up.sql
migrations/2023-02-11-223852_create_user_friends/: down.sql  up.sql
migrations/2023-02-11-223857_create_receipts/: up.sql
migrations/2023-02-11-223900_create_items/: up.sql
migrations/2023-02-11-223905_create_item_contributors/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  models.rs  utils.rs
src/apiv2/: fairing.rs  methods.rs  mod.rs  receipts.rs  request_guard.rs  users.rs
src/apiv2/receipts/: utils.rs
src/apiv2/users/: utils.rs
src/db/: mod.rs
src/db/models/: item_contributors.rs  items.rs  mod.rs  receipts.rs  user_friends.rs  users.rs
src/site/: mod.rs  receipts.rs  test_routes.rs  users.rs  utils.rs
src/site/users/: utils.rs
static/templates/: base.html.tera  index.html.tera  receipt.html.tera  receipts.html.tera
static/templates/partials/: base.html.tera  nav.html.tera
static/templates/receipts/: create.html.tera  receipt.html.tera  receipts.html.tera
static/templates/users/: create_user.html.tera  login.html.tera  user_created.html.tera
