[package]
name = "receipt-api-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
regex = "1.7.1"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*
